Revision history for Perl extension Devel::Size.

0.77_50 2012-02-10 nicholas
 * t/globs.t was failing on 5.15.6 and later due to side effects of a change
   to strict.pm [CPAN #73998]

0.77 2011-05-16 nicholas
 [no changes]

0.76_50 2011-05-12 nicholas
 * Split out HEK size calculation into hek_size(). Add the shared HE overhead.
 * Handle shared hash key scalars correctly.
 * GvNAME() is shared from 5.10 onwards.
 * Count HvNAME(), the HV "aux" struct, the mro_meta struct, and ENAMEs.

0.76 2011-05-11 nicholas
 * Just fix the version number in the line below.

0.75_52 2011-05-09 nicholas
 * Use a table for SV body sizes. These incorporate the space saving post 5.8.x
 * Correctly handle SvOOK scalars. 5.12 and later don't use SvIVX().
 * Magic vtables aren't freed when magic is freed, so don't count them.
   (They are static structures. Anything that assumes otherwise is buggy.)
 * Reinstate 5.6.x "support". (i.e. it compiles and passes tests.)
 * Reinstate 5.005_xx "support". (i.e. it compiles and passes tests.)

0.75_51 2011-05-05 nicholas
 * Only use a static array of vtables on gcc.

0.75_50 2011-05-04 nicholas
 * The core's magic vtables are global constants, so aren't part of the size.
 * Follow mg_obj and mg_ptr.

0.75 2011-05-04 nicholas
 [no changes]

0.74_53 2011-05-01 nicholas
 * Fix typo error in bit-vector tracking mechanism. On 64 bit platforms which
   allocate on 8 byte alignment (rather than 16), a low pointer bit could get
   lost, resulting in new pointers being considered already "seen".
   "Found" by BinGOs' smoker, fixed on spectre.mongueurs.net. Thanks.

0.74_52 2011-04-23 nicholas
 * Fix potential SEGVs for OP_AELEMFAST on a lexical (eg $foo[3])
 * Fix likely SEGVs for PVOPs (missing break)
 * Fix potential SEGVs for PVBMs on 5.10 and later
 * Move hash and array traversal from total_size() to sv_size()
   - this allows total_size() and size() to be XS ALIASes.

0.74_51 2011-04-22 nicholas