@@ -3,6 +3,8 @@ Revision history for Perl extension Devel::Size.
 0.77_50 2012-02-10 nicholas
  * t/globs.t was failing on 5.15.6 and later due to side effects of a change
    to strict.pm [CPAN #73998]
+ * skip tests in t/magic.t that use formline on 5.8.1 and 5.8.2, as those
+   versions have a buggy formline that can trigger an assertion failure.
 
 0.77 2011-05-16 nicholas
  [no changes]
